environでビルド時と開発時で動作を変えた